src/objects/QIPP_Action_Plan__c.object
<CustomObject>
    <description>Action Plan custom object for Findings</description>
    <fields>
        <fullName>Action_Initiator_CA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search by the *First Name* (or) *Last Name* - append * at the beginning and at the end - and you will be provided with a list of contacts to choose from.</inlineHelpText>
        <label>Action Initiator (CA)</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Action Plans (Action Initiator (CA))</relationshipLabel>
        <relationshipName>Action_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Initiator_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search by the *First Name* (or) *Last Name* - append * at the beginning and at the end - and you will be provided with a list of contacts to choose from.</inlineHelpText>
        <label>Action Initiator (PA)</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Action Plans (Action Initiator (PA))</relationshipLabel>
        <relationshipName>Action_Plans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search by the *First Name* (or) *Last Name* - append * at the beginning and at the end - and you will be provided with a list of contacts to choose from.</inlineHelpText>
        <label>Action Initiator</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Action Plans (Action Initiator)</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Owner_Email__c</fullName>
        <label>Action Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Action Owner</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Action Plans (Action Owner)</relationshipLabel>
        <relationshipName>Action_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Actual_Completion_Date__c</fullName>
        <label>Action Plan Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Age__c</fullName>
        <formula>CASE(  Action_Plan_State__c  , 

&quot;In Progress&quot;, TEXT(today()-  Action_Plan_Start_Date__c ) +&quot; days&quot;, 

&quot;Complete&quot;, TEXT( Action_Plan_Actual_Completion_Date__c  - Action_Plan_Start_Date__c) +&quot; days&quot;, 

&quot;Canceled&quot;, TEXT(Action_Plan_Actual_Completion_Date__c - Action_Plan_Start_Date__c) +&quot; days&quot;, 

TEXT(today()- Action_Plan_Start_Date__c) +&quot; days&quot; 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Plan Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Created_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Action Plan Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Forecast_Completion_Date__c</fullName>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Name__c</fullName>
        <label>Action Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Notes_CA__c</fullName>
        <label>Action Plan Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Notes_PA__c</fullName>
        <label>Action Plan Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Notes__c</fullName>
        <label>Action Plan Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id,    TEXT(  Finding_ID__r.Finding_Type__c ) +&quot;-&quot;+ Finding_ID__r.Name +&quot;-&quot; +  Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Plan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Percent_Complete__c</fullName>
        <label>Action Plan Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Start_Date__c</fullName>
        <label>Action Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Plan_State_CA__c</fullName>
        <label>Action Plan State (CA)</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Plan_State_PA__c</fullName>
        <label>Action Plan State (PA)</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Plan_State_RCA__c</fullName>
        <label>Action Plan State (RCA)</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyzed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Plan_State__c</fullName>
        <label>Action Plan State</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Type__c</fullName>
        <label>Action Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corrective Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Root Cause Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Plan_URL_CA__c</fullName>
        <label>CA Action Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Action_Plan_URL_PA__c</fullName>
        <label>PA Action Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Action_Plan_URL__c</fullName>
        <label>RCA Action Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date_CA__c</fullName>
        <label>Closing Date - CA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date_PA__c</fullName>
        <label>Closing Date - PA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Analyzed_Date__c</fullName>
        <label>Analyzed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CapEx_Required_CA__c</fullName>
        <label>CapEx Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CapEx_Required_PA__c</fullName>
        <label>CapEx Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CapEx_Required__c</fullName>
        <label>CapEx Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CapEx_Requirement_Description_CA__c</fullName>
        <label>CapEx Requirement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CapEx_Requirement_Description_PA__c</fullName>
        <label>CapEx Requirement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CapEx_Requirement_Description__c</fullName>
        <label>CapEx Requirement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Date_RCA__c</fullName>
        <label>Closing Date - RCA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Detailed_CA__c</fullName>
        <inlineHelpText>Corrective Action:The Correction to correct the known problem.</inlineHelpText>
        <label>Description - Detailed (CA)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Detailed_PA__c</fullName>
        <inlineHelpText>Preventive Action:The correction to prevent recurrence.</inlineHelpText>
        <label>Description - Detailed (PA)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Detailed__c</fullName>
        <inlineHelpText>NC RCA: 8D or other methodology (5Whys, DMAIC) can be utilized as long as required steps are taken to determine the root cause.
OFI: Record the OFI analysis &amp; decision for next steps to be taken. Use CA/PA fields for the actual change to be implemented.</inlineHelpText>
        <label>Description - Detailed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finding_Auditor_Email__c</fullName>
        <label>Finding Auditor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finding_ID__c</fullName>
        <label>Finding ID</label>
        <referenceTo>Finding__c</referenceTo>
        <relationshipName>Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Finding_Number__c</fullName>
        <formula>Finding_ID__r.Finding_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finding Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Completion_Date_CA__c</fullName>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Completion_Date_PA__c</fullName>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_Cancellation__c</fullName>
        <inlineHelpText>If Action is cancelled, please provide the details regarding the reason for cancellation</inlineHelpText>
        <label>NOTES</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpEx_Required_CA__c</fullName>
        <label>OpEx Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpEx_Required_PA__c</fullName>
        <label>OpEx Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpEx_Required__c</fullName>
        <label>OpEx Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpEx_Requirement_Description_CA__c</fullName>
        <label>OpEx Requirement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpEx_Requirement_Description_PA__c</fullName>
        <label>OpEx Requirement Description_PA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpEx_Requirement_Description__c</fullName>
        <label>OpEx Requirement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Action Owner</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Action Plans (Secondary Action Owner)</relationshipLabel>
        <relationshipName>Action_Plans4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date_CA__c</fullName>
        <label>Target Completion Date (CA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date_PA__c</fullName>
        <label>Target Completion Date (PA)</label>
        <type>Date</type>
    </fields>
    <label>QIPP Action Plan</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Action Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <recordTypes>
        <fullName>Action_Plan_Record_Type</fullName>
        <active>true</active>
        <label>Action Plan Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Action_Plan_Record_Type</fullName>
        <active>true</active>
        <label>New Action Plan Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Action_Plan_Start_Date</fullName>
        <active>true</active>
        <description>Actual Date should always be GREATER than Action Plan Start Date.</description>
        <errorConditionFormula>Action_Plan_Start_Date__c &gt;  Action_Plan_Actual_Completion_Date__c</errorConditionFormula>
        <errorDisplayField>Action_Plan_Actual_Completion_Date__c</errorDisplayField>
        <errorMessage>Action Plan Closing Date should always be GREATER than Action Plan Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Action_Plan_State</fullName>
        <active>true</active>
        <description>Cannot change Action Plan State  to completed unless Corrective action and Preventive actions are also complete.</description>
        <errorConditionFormula>AND(
 ISPICKVAL(   Action_Plan_State__c , &quot;Complete&quot;),

  OR( NOT(ISPICKVAL(Action_Plan_State_CA__c, &quot;Complete&quot;)),
      NOT(ISPICKVAL(Action_Plan_State_PA__c, &quot;Complete&quot;)) )

)</errorConditionFormula>
        <errorDisplayField>Action_Plan_State__c</errorDisplayField>
        <errorMessage>Cannot change Action Plan State  to &quot;Complete&quot; unless Corrective action and Preventive actions are also complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Analyzed_Date</fullName>
        <active>true</active>
        <description>Cannot change Action Plan (RCA) State  to Analyzed unless an Analyzed Date is entered</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Action_Plan_State_RCA__c , &quot;Analyzed&quot;),

ISBLANK(Analyzed_Date__c) 

)</errorConditionFormula>
        <errorDisplayField>Action_Plan_State_RCA__c</errorDisplayField>
        <errorMessage>Action Plan State (RCA) cannot be set to &quot;Analyzed&quot; unless Analyzed Date is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Corrective_Action_Plan_State</fullName>
        <active>false</active>
        <description>Cannot change Correction Action Plan State  to completed unless an ACTUAL date is entered for Corrective Action.</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Action_Plan_State_CA__c , &quot;Complete&quot;),

ISBLANK(Actual_Completion_Date_CA__c) 

)</errorConditionFormula>
        <errorDisplayField>Action_Plan_State_CA__c</errorDisplayField>
        <errorMessage>Action Plan State cannot be set to &quot;Complete&quot; unless Actual completion date is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Preventive_Action_Plan_State</fullName>
        <active>false</active>
        <description>Cannot change Preventive Action Plan State  to completed unless an ACTUAL date is entered for Corrective Action.</description>
        <errorConditionFormula>AND(
 ISPICKVAL(  Action_Plan_State_PA__c  , &quot;Complete&quot;),

ISBLANK(Actual_Completion_Date_PA__c) 

)</errorConditionFormula>
        <errorDisplayField>Action_Plan_State_PA__c</errorDisplayField>
        <errorMessage>Action Plan State cannot be set to &quot;Complete&quot; unless Actual completion date is populated.</errorMessage>
    </validationRules>
</CustomObject>